Agregado Filtro para que pueda acceder a la carpeta de las vistas solo si esta logueado. Por ej. la url ahora es /views/test.xhtml en vez de solo /test.xhtml

--- a/Tsig/WebContent/views/poligonos.xhtml
+++ b/Tsig/WebContent/views/poligonos.xhtml
@@ -9,10 +9,10 @@
 <h:head>
  <h:outputStylesheet library="css" name="styles.css" />
 
-<link rel="stylesheet" href="resources/css/ol.css"></link>
+<link rel="stylesheet" href="../resources/css/ol.css"></link>
 
 <script src="http://www.openlayers.org/api/2.11/OpenLayers.js"></script>
-<script type="text/javascript" src="resources/js/poligonos.js"></script>
+<script type="text/javascript" src="../resources/js/poligonos.js"></script>
 	<style type="text/css">
 		#controlToggle li {
 			list-style: none;
