--- a/Tsig/WebContent/views/altaCasa.xhtml
+++ b/Tsig/WebContent/views/altaCasa.xhtml
@@ -132,7 +132,7 @@
 
 								input.value= puntos.features.length;
 								
-								//feature.attributes.numpunto=input.value;
+								feature.attributes.estado="privada";
 								
 								//alert(input.value);
 								feature.layer.drawFeature(feature);
